--- a/src/main/resources/com/practice/tictactoe/tictactoe-view.fxml
+++ b/src/main/resources/com/practice/tictactoe/tictactoe-view.fxml
@@ -6,62 +6,62 @@
 
 <Pane prefHeight="500.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.practice.tictactoe.TictactoeController">
 
-    <GridPane gridLinesVisible="true" layoutX="50.0" layoutY="27.0" prefHeight="300.0" prefWidth="300.0">
+    <GridPane fx:id="grid" gridLinesVisible="true" layoutX="50.0" layoutY="27.0" prefHeight="300.0" prefWidth="300.0" visible="false">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
-        <Button fx:id="button1" prefHeight="140.0" prefWidth="140.0" onAction="#onButton1Click" GridPane.columnIndex="0" GridPane.rowIndex="0">
+        <Button fx:id="button1" onAction="#onButton1Click" prefHeight="140.0" prefWidth="140.0" GridPane.columnIndex="0" GridPane.rowIndex="0">
             <font>
-                <Font name="Arial" size="48.0"/>
+                <Font name="Arial" size="48.0" />
             </font>
         </Button>
-        <Button fx:id="button2" prefHeight="140.0" prefWidth="140.0" onAction="#onButton2Click" GridPane.columnIndex="1" GridPane.rowIndex="0">
+        <Button fx:id="button2" onAction="#onButton2Click" prefHeight="140.0" prefWidth="140.0" GridPane.columnIndex="1" GridPane.rowIndex="0">
             <font>
-                <Font name="Arial" size="48.0"/>
+                <Font name="Arial" size="48.0" />
             </font>
         </Button>
-        <Button fx:id="button3" prefHeight="140.0" prefWidth="140.0" onAction="#onButton3Click" GridPane.columnIndex="2" GridPane.rowIndex="0">
+        <Button fx:id="button3" onAction="#onButton3Click" prefHeight="140.0" prefWidth="140.0" GridPane.columnIndex="2" GridPane.rowIndex="0">
             <font>
-                <Font name="Arial" size="48.0"/>
+                <Font name="Arial" size="48.0" />
             </font>
         </Button>
-        <Button fx:id="button4" prefHeight="140.0" prefWidth="140.0" onAction="#onButton4Click" GridPane.columnIndex="0" GridPane.rowIndex="1">
+        <Button fx:id="button4" onAction="#onButton4Click" prefHeight="140.0" prefWidth="140.0" GridPane.columnIndex="0" GridPane.rowIndex="1">
             <font>
-                <Font name="Arial" size="48.0"/>
+                <Font name="Arial" size="48.0" />
             </font>
         </Button>
-        <Button fx:id="button5" prefHeight="140.0" prefWidth="140.0" onAction="#onButton5Click" GridPane.columnIndex="1" GridPane.rowIndex="1">
+        <Button fx:id="button5" onAction="#onButton5Click" prefHeight="140.0" prefWidth="140.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
             <font>
-                <Font name="Arial" size="48.0"/>
+                <Font name="Arial" size="48.0" />
             </font>
         </Button>
-        <Button fx:id="button6" prefHeight="140.0" prefWidth="140.0" onAction="#onButton6Click" GridPane.columnIndex="2" GridPane.rowIndex="1">
+        <Button fx:id="button6" onAction="#onButton6Click" prefHeight="140.0" prefWidth="140.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
             <font>
-                <Font name="Arial" size="48.0"/>
+                <Font name="Arial" size="48.0" />
             </font>
         </Button>
-        <Button fx:id="button7" prefHeight="140.0" prefWidth="140.0" onAction="#onButton7Click" GridPane.columnIndex="0" GridPane.rowIndex="2">
+        <Button fx:id="button7" onAction="#onButton7Click" prefHeight="140.0" prefWidth="140.0" GridPane.columnIndex="0" GridPane.rowIndex="2">
             <font>
-                <Font name="Arial" size="48.0"/>
+                <Font name="Arial" size="48.0" />
             </font>
         </Button>
-        <Button fx:id="button8" prefHeight="140.0" prefWidth="140.0" onAction="#onButton8Click" GridPane.columnIndex="1" GridPane.rowIndex="2">
+        <Button fx:id="button8" onAction="#onButton8Click" prefHeight="140.0" prefWidth="140.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
             <font>
-                <Font name="Arial" size="48.0"/>
+                <Font name="Arial" size="48.0" />
             </font>
         </Button>
-        <Button fx:id="button9" prefHeight="140.0" prefWidth="140.0" onAction="#onButton9Click" GridPane.columnIndex="2" GridPane.rowIndex="2">
+        <Button fx:id="button9" onAction="#onButton9Click" prefHeight="140.0" prefWidth="140.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
             <font>
-                <Font name="Arial" size="48.0"/>
+                <Font name="Arial" size="48.0" />
             </font>
         </Button>
     </GridPane>
-    <Button fx:id="start" onAction="#onStartClick" layoutX="162.0" layoutY="374.0" mnemonicParsing="false" prefWidth="84.0" text="Start Game"/>
+    <Button fx:id="start" layoutX="134.0" layoutY="359.0" mnemonicParsing="false" onAction="#onStartClick" prefHeight="48.0" prefWidth="133.0" text="Start New Game" />
 </Pane>
