--- a/src/main/resources/com/practice/tictactoe/tictactoe-view.fxml
+++ b/src/main/resources/com/practice/tictactoe/tictactoe-view.fxml
@@ -4,9 +4,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<Pane prefHeight="500.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.practice.tictactoe.TictactoeController">
+<Pane prefHeight="500.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.practice.tictactoe.TicTacToeController">
 
-    <GridPane fx:id="grid" gridLinesVisible="true" layoutX="50.0" layoutY="27.0" prefHeight="300.0" prefWidth="300.0" visible="false">
+    <GridPane fx:id="grid" gridLinesVisible="true" layoutX="53.0" layoutY="88.0" prefHeight="300.0" prefWidth="300.0" visible="false">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -63,5 +63,30 @@
             </font>
         </Button>
     </GridPane>
-    <Button fx:id="start" layoutX="134.0" layoutY="359.0" mnemonicParsing="false" onAction="#onStartClick" prefHeight="48.0" prefWidth="133.0" text="Start New Game" />
+    <Button fx:id="start" layoutX="136.0" layoutY="420.0" mnemonicParsing="false" onAction="#onStartClick" prefHeight="48.0" prefWidth="133.0" text="Start New Game" />
+    <Pane fx:id="difficulty" layoutX="95.0" layoutY="140.0" prefHeight="200.0" prefWidth="200.0">
+        <Label layoutX="38.0" layoutY="25.0" prefHeight="35.0" prefWidth="125.0" text="Select Difficulty" textAlignment="CENTER">
+           <font>
+               <Font name="Arial" size="18.0" />
+           </font>
+        </Label>
+        <fx:define>
+            <ToggleGroup fx:id="radioButtonGroup" />
+        </fx:define>
+        <RadioButton fx:id="easyRadioBtn" layoutX="74.0" layoutY="80.0" mnemonicParsing="false" selected="true" text="Easy" toggleGroup="$radioButtonGroup">
+           <font>
+               <Font size="14.0" />
+           </font>
+        </RadioButton>
+        <RadioButton fx:id="hardRadioBtn" layoutX="72.0" layoutY="117.0" mnemonicParsing="false" text="Hard" toggleGroup="$radioButtonGroup">
+           <font>
+               <Font name="Arial" size="14.0" />
+           </font>
+        </RadioButton>
+    </Pane>
+   <Label fx:id="winLabel" layoutX="125.0" layoutY="61.0" prefHeight="27.0" prefWidth="156.0" text="You Win" visible="false">
+      <font>
+         <Font name="Arial" size="18.0" />
+      </font>
+   </Label>
 </Pane>
